--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@playwright/test": "^1.21.0",
         "@sveltejs/adapter-auto": "next",
+        "@sveltejs/adapter-static": "^1.0.0-next.29",
         "@sveltejs/kit": "next",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
@@ -31,6 +32,7 @@
         "prettier-plugin-tailwindcss": "^0.1.10",
         "svelte": "^3.44.0",
         "svelte-check": "^2.2.6",
+        "svelte-hmr": "^0.14.11",
         "svelte-preprocess": "^4.10.5",
         "tailwindcss": "^3.0.23",
         "tslib": "^2.3.1",
@@ -39,7 +41,6 @@
     "type": "module",
     "dependencies": {
         "@tailwindcss/forms": "^0.5.0",
-        "idb": "^7.0.1",
-        "svelte-hmr": "^0.14.11"
+        "idb": "^7.0.1"
     }
 }
