--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "devDependencies": {
         "@playwright/test": "^1.21.0",
         "@sveltejs/adapter-auto": "next",
-        "@sveltejs/adapter-static": "^1.0.0-next.29",
         "@sveltejs/kit": "next",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
@@ -31,6 +30,7 @@
         "prettier": "^2.5.1",
         "prettier-plugin-tailwindcss": "^0.1.10",
         "svelte": "^3.44.0",
+        "svelte-adapter-github": "^0.0.1-next.0",
         "svelte-check": "^2.2.6",
         "svelte-hmr": "^0.14.11",
         "svelte-preprocess": "^4.10.5",
