Fix and rebuild site

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "devDependencies": {
         "@playwright/test": "^1.21.0",
         "@sveltejs/adapter-auto": "next",
+        "@sveltejs/adapter-static": "^1.0.0-next.29",
         "@sveltejs/kit": "next",
+        "@types/html-minifier": "^4.0.2",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
         "autoprefixer": "^10.4.4",
@@ -25,12 +27,12 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-svelte3": "^3.2.1",
         "eslint-plugin-tailwindcss": "^3.5.0",
+        "html-minifier": "^4.0.0",
         "postcss": "^8.4.12",
         "postcss-load-config": "^3.1.4",
         "prettier": "^2.5.1",
         "prettier-plugin-tailwindcss": "^0.1.10",
         "svelte": "^3.44.0",
-        "svelte-adapter-github": "^0.0.1-next.0",
         "svelte-check": "^2.2.6",
         "svelte-hmr": "^0.14.11",
         "svelte-preprocess": "^4.10.5",
